# C-programming

./: 1helloword.c  2addition.c  3addition.c  4simpleinterest.c  5circlearea.c  6squarecube.c  7swap.c  8multiply.cpp
c_interview_questions/: README.md
c_interview_questions/advanced_questions/: advanced_questions.md
c_interview_questions/basic_questions/: basic_questions.md
c_interview_questions/examples/: CMakeLists.txt  input.txt  log.txt
c_interview_questions/examples/src/: file_logger.c  file_processor.c
c_interview_questions/intermediate_questions/: intermediate_questions.md
